# soem-cpp

./: CMakeLists.txt  README.md
h4-sdk-core/: CMakeLists.txt
h4-sdk-core/apps/: H4EtherSnacksTestbed.cpp  H4IMUTestbed.cpp  h4EtherSnacksTestbed.cpp  h4IMUTestbed.cpp
h4-sdk-core/include/: BufferOffsetHolder.h  H4EtherSnacksBoard.h  H4IMU.h  Master.h  Slove.h  abstract_imu.h  abstract_motor_controller.h  h4_ethersnacks_board.h  h4_imu.h
h4-sdk-core/src/: AbstractIMU.cpp  BufferOffsetHolder.cpp  H4EtherSnacksBoard.cpp  H4IMU.cpp  Master.cpp  abstract_imu.cpp  abstract_motor_controller.cpp  h4_ethersnacks_board.cpp  h4_imu.cpp  lib.cpp
include/: lib.h
soem-cpp-core/: CMakeLists.txt
soem-cpp-core/examples/: H4EtherSnacksBoard.cpp  H4EtherSnacksBoard.h  H4EtherSnacksTestbed.cpp
soem-cpp-core/include/: AbstractIMU.h  AbstractMotorController.h  BufferOffsetHolder.h  Master.h  PDO.h  Slove.h  SyncManager.h
soem-cpp-core/src/: AbstractIMU.cpp  AbstractMotorController.cpp  BufferOffsetHolder.cpp  Master.cpp  PDO.cpp  Slove.cpp  SyncManager.cpp
src/: lib.cpp  main.cpp
